add deposit\withdraw every currency
